app-image/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: APP_NAME
  name: APP_NAME
  namespace: apps
spec:
  ports:
  - port: PORT
    protocol: TCP
    targetPort: 4180
  selector:
    app: APP_NAME
  type: ClusterIP
